<resources>
    <string name="app_name">Googlemee</string>
    <string name="new_meeting">New Meeting</string>
    <string name="join_a_meeting">Join a meeting</string>
    <string name="get_a_link_you_can_share">Get a link you can share</string>
    <string name="get_a_link_you_can">Get a link you can</string>
    <string name="share">share</string>
    <string name="can_send">can send to people you want to</string>
    <string name="meet_with">meet with</string>
    <string name="tap_new">Tap New meeting to get a link you</string>
    <string name="general">General</string>
    <string name="send_more_diagnostic_info">Send more diagnostic info</string>
    <string name="your_administrator_controls_this_setting">your administrator controls this setting</string>
    <string name="join">Join</string>
    <string name="Enter_a_meeting">Enter a meeting nickname or the code provided by</string>
    <string name="the_meeting_organizer">the meeting organizer</string>
    <string name="example">Example : mymeeting or abc-mnop-xyz</string>
    <string name="get_joining_info_to_share">Get joining info to share</string>
    <string name="start_an_instant_meeting">Start an instant meeting</string>
    <string name="schedule_in_google_calendar">Schedule in Google Calendar</string>
    <string name="close">Close</string>
    <string name="menu">menu</string>
    <string name="meet">Meet</string>
    <string name="settings">Settings</string>
    <string name="send_feedback">Send feedback</string>
    <string name="help">Help</string>
    <string name="G">G</string>
    <string name="g">g</string>
    <string name="O">o</string>
    <string name="l">l</string>
    <string name="e">e</string>
    <string name="Muhammad_reda">Muhammad Reda Teknik Informatika</string>
    <string name="Email">12050117512@students.uin-suska.ac.id</string>
    <string name="manage_your_google_account">Manage your Google Account</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="masukkan_alamat_email_anda">Masukkan alamat Email anda</string>
    <string name="masukkan_password_anda">Masukkan password anda</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="make_a_accoutn">Buat akun</string>
    <string name="login">Login</string>
    <string name="bukan_perangkat_anda_gunakan_jendela_penjelajahan">Bukan perangkat anda? Gunakan jendela penjelajahan</string>
    <string name="rahasia_untuk_login">rahasia untuk login.</string>
    <string name="pelajari_lebuh_lanjut">Pelajari lebuh lanjut</string>
    <string name="by_redha">by Redha</string>
</resources>