<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Noactionbar2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffff"
        android:orientation="vertical">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/google" />

        <TextView
            android:id="@+id/selamatdatang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="55dp"
            android:text="@string/selamat_datang"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/selamatdatang"
            android:layout_marginStart="30dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/side2"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            >

           <com.google.android.material.textfield.TextInputEditText
               android:inputType="textEmailAddress"
               android:background="@drawable/side2"
               android:hint="@string/masukkan_alamat_email_anda"
               android:layout_width="300dp"
               android:layout_height="wrap_content"
               />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_marginTop="10dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/side2"
            android:layout_below="@+id/email"
            android:layout_marginStart="30dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleEnabled="true"

           >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etpassword"
                android:inputType="textPassword"
                android:hint="@string/masukkan_password_anda"
                android:background="@drawable/side2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/lupaspassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnlogin"
            android:layout_marginStart="95dp"
            android:layout_marginTop="10dp"
            android:text="@string/lupa_password"
            android:textColor="#3689F9" />

        <TextView
            android:id="@+id/newaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnlogin"
            android:layout_marginStart="210dp"
            android:layout_marginTop="10dp"
            android:text="@string/make_a_accoutn"
            android:textColor="#3689F9" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:background="@drawable/side"
            android:backgroundTint="#3689F9"
            android:hint="@string/login"
            android:onClick="clicklogin"
            android:textColorHint="@color/white" />

        <TextView
            android:id="@+id/bukanperangkat"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/lupaspassword"
            android:layout_marginStart="10dp"
            android:layout_marginTop="150dp"
            android:text="@string/bukan_perangkat_anda_gunakan_jendela_penjelajahan"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/rahasialogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bukanperangkat"
            android:layout_marginStart="10dp"
            android:text="@string/rahasia_untuk_login"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/pelajarilanjut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bukanperangkat"
            android:layout_marginStart="118dp"
            android:text="@string/pelajari_lebuh_lanjut"
            android:textColor="#3689F9"
            android:textSize="12sp" />

    </RelativeLayout>
</LinearLayout>