<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffff"
    android:orientation="vertical">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerlayout"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".meet_utama">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:padding="15dp"
                android:background="#ffff"
                >

                <Button
                    android:id="@+id/new_meeting"
                    android:layout_width="165dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="70dp"
                    android:background="@drawable/side"
                    android:backgroundTint="#2880F5"
                    android:hint="@string/new_meeting"
                    android:textColorHint="@color/white" />

                <Button
                    android:id="@+id/join_a_meeting"
                    android:layout_width="170dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="180dp"
                    android:layout_marginTop="70dp"
                    android:background="@drawable/side2"
                    android:hint="@string/join_a_meeting"
                    android:onClick="clickjoin"
                    android:textColorHint="#2880F5" />

                <ImageView
                    android:id="@+id/meet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/join_a_meeting"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/meet" />

                <TextView
                    android:id="@+id/get_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/meet"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    android:text="@string/get_a_link_you_can"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txshare"
                    android:layout_below="@+id/get_link"
                    android:layout_centerHorizontal="true"
                    android:text="@string/share"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:id="@+id/tap_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txshare"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/tap_new"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/can_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tap_new"
                    android:layout_centerHorizontal="true"
                    android:text="@string/can_send"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/meet_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/can_send"
                    android:layout_centerHorizontal="true"
                    android:text="@string/meet_with"
                    android:textColor="@color/black"
                    android:textSize="14sp" />


                <ImageView
                    android:id="@+id/bulatan1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/meet_new"
                    android:layout_marginStart="150dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/bulatan" />

                <ImageView
                    android:layout_marginStart="170dp"
                    android:layout_below="@+id/meet_new"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/bulatan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />


            </RelativeLayout>


            <LinearLayout
                android:id="@+id/layoutToolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintTop_toTopOf="parent"
                >

                <Button
                    android:id="@+id/menu"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/menu"
                    android:background="@drawable/menu"
                    />

                <TextView
                    android:id="@+id/titleMenu"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="110dp"
                    android:text="@string/meet"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    />

                <ImageView
                    android:id="@+id/pasfoto"
                    android:layout_marginStart="95dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/pasfoto2"
                    />

            </LinearLayout>




        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:menu="@menu/menul"
            app:headerLayout="@layout/layout_navigation_header"
            android:layout_gravity="start"
            />

    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>