<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:backgroundTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="Join a meeting"
                    app:titleTextColor="@color/black"
                    app:titleMarginStart="95dp"/>


                <Button
                    android:id="@+id/back"
                    android:onClick="backbutton"
                    android:background="@drawable/back"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="@id/toolbar"
                    android:layout_marginStart="15dp"
                    app:srcCompat="@drawable/back"
                    />

                <TextView
                    android:text="@string/join"
                    app:layout_constraintEnd_toEndOf="@id/toolbar"
                    android:id="@+id/joinn"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginEnd="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:background="#ffff"
        >

        <TextView
            android:id="@+id/enter_a_meeting"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/Enter_a_meeting"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/meetorg"
            android:layout_below="@+id/enter_a_meeting"
            android:layout_marginStart="40dp"
            android:text="@string/the_meeting_organizer"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/example"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_below="@+id/meetorg"
            android:layout_width="340dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etexample"
                android:hint="@string/example"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>



    </RelativeLayout>
</LinearLayout>